Updated filenames and code
- Updated code to convert couple of columns to use PostgreSQL TIME datatype.
- Used None instead of -1

--- a/01 Data Cleansing.ipynb
+++ b/01 Data Cleansing.ipynb
@@ -14,9 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import psycopg2\n",
-    "import datetime\n",
-    "import seaborn as sns"
+    "import datetime"
    ]
   },
   {
@@ -565,24 +563,23 @@
     "arrActualTimeCols = ['DEPTIME', 'ARRTIME']\n",
     "\n",
     "####\n",
-    "## Function to left pad the string values with 0. Ignore values that were not defined in original dataset\n",
+    "## Function to left pad the string values with 0. Ignore null values.\n",
     "####\n",
     "def padZero(x):\n",
-    "    if x != '-1':\n",
-    "        return x.zfill(4)\n",
+    "    if x == 'nan':\n",
+    "        return None\n",
     "    else:\n",
-    "        return x\n",
+    "        # Remove the .0 t the end and left pad with 0\n",
+    "        return x[:-2].zfill(4)\n",
     "\n",
     "def convertToTime(x):\n",
-    "    if x != '-1':\n",
-    "        return x[:2] + ':' + x[2:] + ':00'\n",
-    "    else:\n",
+    "    if x == None:\n",
     "        return x\n",
+    "    else:\n",
+    "        return x[:2] + ':' + x[2:] + ':00'\n",
     "\n",
     "for timeCol in arrActualTimeCols:\n",
-    "    flights[timeCol] = flights[timeCol].fillna(-1).astype('int').astype('str')\n",
-    "    flights[timeCol] = flights[timeCol].map(padZero).map(convertToTime)\n",
-    "    flights[timeCol].replace('-1', '', inplace=True)"
+    "    flights[timeCol] = flights[timeCol].astype('str').map(padZero).map(convertToTime)"
    ]
   },
   {
@@ -681,13 +678,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Converting DataFrame to parquet\n",
-    "Saving the DataFrame as a parquet format. The parquet file format is a binary file which stores the schema information as well. The file can later be read and stored to a database."
+    "### 8. Adding DISTANCE_GROUP column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights['DISTANCE_GROUP'] = \\\n",
+    "(flights['DISTANCE'].astype(int).floordiv(100)*100).map(str) + \\\n",
+    "'-' + \\\n",
+    "(flights['DISTANCE'].astype(int).floordiv(100)*100+100).map(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. Adding a column named DEPDELAY_GT15 indicating if the departure delay is greater than 15 minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights['DEPDELAY_GT15'] = flights['DEPDELAY'] > 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Removing Airline Code from name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights['AIRLINENAME'] = flights['AIRLINENAME'].map(lambda x: x.split(':')[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Clean up the Airport Name by removing the concatenated city and state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights['ORIGAIRPORTNAME'] = flights['ORIGAIRPORTNAME'].map(lambda x: x.split(':')[1].strip())\n",
+    "flights['DESTAIRPORTNAME'] = flights['DESTAIRPORTNAME'].map(lambda x: x.split(':')[1].strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12. Converting DataFrame to parquet\n",
+    "Saving the DataFrame as a parquet format. The parquet file format is a binary file which stores the schema information as well. The file can later be read and stored to a database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
