--- a/02 Data Loading.ipynb
+++ b/02 Data Loading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1191805 entries, 0 to 1191804\n",
-      "Data columns (total 31 columns):\n",
+      "Data columns (total 33 columns):\n",
       "TRANSACTIONID        1191805 non-null int64\n",
       "FLIGHTDATE           1191805 non-null datetime64[ns]\n",
       "AIRLINECODE          1191805 non-null object\n",
@@ -49,22 +49,24 @@
       "DESTSTATE            1191805 non-null object\n",
       "DESTSTATENAME        1191805 non-null object\n",
       "CRSDEPTIME           1191805 non-null object\n",
-      "DEPTIME              1191805 non-null object\n",
+      "DEPTIME              1163470 non-null object\n",
       "DEPDELAY             1163470 non-null float64\n",
       "TAXIOUT              1011833 non-null float64\n",
       "WHEELSOFF            1011791 non-null float64\n",
       "WHEELSON             1010225 non-null float64\n",
       "TAXIIN               1010320 non-null float64\n",
       "CRSARRTIME           1191805 non-null object\n",
-      "ARRTIME              1191805 non-null object\n",
+      "ARRTIME              1161439 non-null object\n",
       "ARRDELAY             1160545 non-null float64\n",
       "CRSELAPSEDTIME       1191383 non-null float64\n",
       "ACTUALELAPSEDTIME    1160545 non-null float64\n",
       "CANCELLED            1191805 non-null bool\n",
       "DIVERTED             1191805 non-null bool\n",
       "DISTANCE             1191805 non-null float64\n",
-      "dtypes: bool(2), datetime64[ns](1), float64(9), int64(2), object(17)\n",
-      "memory usage: 275.1+ MB\n"
+      "DISTANCE_GROUP       1191805 non-null object\n",
+      "DEPDELAY_GT15        1191805 non-null bool\n",
+      "dtypes: bool(3), datetime64[ns](1), float64(9), int64(2), object(18)\n",
+      "memory usage: 285.3+ MB\n"
      ]
     }
    ],
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +129,6 @@
     "    \n",
     "    cursor.execute(create_table_query)\n",
     "    print(\"dim_airline table created successfully\")\n",
-    "    \n",
-    "    # Removing Airline Code from name\n",
-    "    flights['AIRLINENAME'] = flights['AIRLINENAME'].map(lambda x: x.split(':')[0])\n",
     "    \n",
     "    # Getting data from the DataFrame\n",
     "    setAirline = set(zip(flights.AIRLINECODE, flights.AIRLINENAME))\n",
@@ -159,13 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flights['ORIGAIRPORTNAME'] = flights['ORIGAIRPORTNAME'].map(lambda x: x.split(':')[1].strip())\n",
-    "flights['DESTAIRPORTNAME'] = flights['DESTAIRPORTNAME'].map(lambda x: x.split(':')[1].strip())\n",
-    "\n",
     "originAirport = set(zip(flights.ORIGINAIRPORTCODE, \n",
     "        flights.ORIGAIRPORTNAME, \n",
     "        flights.ORIGINCITYNAME, \n",
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +265,7 @@
     "    connection = initConnection()\n",
     "    cursor = connection.cursor()\n",
     "    \n",
-    "    drop_table_query = '''drop table if exists fact_flight;'''\n",
+    "    drop_table_query = '''drop table if exists fact_flight cascade;'''\n",
     "    cursor.execute(drop_table_query)\n",
     "\n",
     "    create_table_query = '''create table fact_flight\n",
@@ -282,20 +278,22 @@
     "                            ORIGINAIRPORTCODE    text,\n",
     "                            DESTAIRPORTCODE      text,\n",
     "                            CRSDEPTIME           time,\n",
-    "                            DEPTIME              text, -- should be time,\n",
+    "                            DEPTIME              time, -- should be time,\n",
     "                            DEPDELAY             real,\n",
     "                            TAXIOUT              float,\n",
     "                            WHEELSOFF            float, -- could have been time\n",
     "                            WHEELSON             float, -- could have been time\n",
     "                            TAXIIN               float, -- could have been time\n",
     "                            CRSARRTIME           time,\n",
-    "                            ARRTIME              text, -- should be time,\n",
+    "                            ARRTIME              time, -- should be time,\n",
     "                            ARRDELAY             real,\n",
     "                            CRSELAPSEDTIME       float,\n",
     "                            ACTUALELAPSEDTIME    float,\n",
     "                            CANCELLED            boolean,\n",
     "                            DIVERTED             boolean,\n",
-    "                            DISTANCE             float\n",
+    "                            DISTANCE             float,\n",
+    "                            DISTANCE_GROUP       text,\n",
+    "                            DEPDELAY_GT15        boolean\n",
     "                            ); '''\n",
     "    cursor.execute(create_table_query)\n",
     "    \n",
@@ -305,7 +303,7 @@
     "    flights2 = flights.loc[:, ['TRANSACTIONID','FLIGHTDATE','TAILNUM','FLIGHTNUM','AIRLINECODE','ORIGINAIRPORTCODE',\n",
     "                              'DESTAIRPORTCODE','CRSDEPTIME','DEPTIME','DEPDELAY','TAXIOUT','WHEELSOFF','WHEELSON',\n",
     "                              'TAXIIN','CRSARRTIME','ARRTIME','ARRDELAY','CRSELAPSEDTIME','ACTUALELAPSEDTIME',\n",
-    "                              'CANCELLED','DIVERTED','DISTANCE']]\n",
+    "                              'CANCELLED','DIVERTED','DISTANCE','DISTANCE_GROUP', 'DEPDELAY_GT15']]\n",
     "\n",
     "    print(\"Starting data load into fact table\")\n",
     "\n",
@@ -362,20 +360,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br/>\n",
-    "Columns arrtime and deptime have '' values and convert them to NULL"
+    "#### Creating the database view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns arrtime and deptime in fact table fact_flight updated successfully\n"
+      "Fact view vw_fact_flight created successfully\n"
      ]
     }
    ],
@@ -384,18 +381,41 @@
     "    connection = initConnection()\n",
     "    cursor = connection.cursor()\n",
     "\n",
-    "    update_table_query = '''update fact_flight \n",
-    "                            set \n",
-    "                            arrtime = case when arrtime = '' then NULL else cast(arrtime as time) end,\n",
-    "                            deptime = case when deptime = '' then NULL else cast(deptime as time) end; '''\n",
-    "    cursor.execute(update_table_query)\n",
+    "    create_view_query = '''create or replace view vw_fact_flight\n",
+    "                            as \n",
+    "                            select TRANSACTIONID,\n",
+    "                            FLIGHTDATE,\n",
+    "                            TAILNUM,\n",
+    "                            FLIGHTNUM,\n",
+    "                            AIRLINECODE,\n",
+    "                            ORIGINAIRPORTCODE,\n",
+    "                            DESTAIRPORTCODE,\n",
+    "                            CRSDEPTIME,\n",
+    "                            DEPTIME,\n",
+    "                            DEPDELAY,\n",
+    "                            TAXIOUT,\n",
+    "                            WHEELSOFF,\n",
+    "                            WHEELSON,\n",
+    "                            TAXIIN,\n",
+    "                            CRSARRTIME,\n",
+    "                            ARRTIME,\n",
+    "                            ARRDELAY,\n",
+    "                            CRSELAPSEDTIME,\n",
+    "                            ACTUALELAPSEDTIME,\n",
+    "                            CANCELLED,\n",
+    "                            DIVERTED,\n",
+    "                            DISTANCE,\n",
+    "                            DISTANCE_GROUP,\n",
+    "                            DEPDELAY_GT15\n",
+    "                            from fact_FLIGHT; '''\n",
+    "    cursor.execute(create_view_query)\n",
     "    \n",
-    "    print(\"Columns arrtime and deptime in fact table fact_flight updated successfully\")\n",
+    "    print(\"Fact view vw_fact_flight created successfully\")\n",
     "    \n",
     "    connection.commit()\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(\"Error with updating fact table - \" + e)\n",
+    "    print(\"Error with view creation of vw_fact_flight - \" + e)\n",
     "finally:\n",
     "    if(connection):\n",
     "        cursor.close()\n",
