--- a/01 Data Cleansing.ipynb
+++ b/01 Data Cleansing.ipynb
@@ -587,7 +587,7 @@
    "metadata": {},
    "source": [
     "### 6. Converting CANCELLED and DIVERTED to boolean\n",
-    "The columns CANCELLED and DIVERTED have the following values - T, True, 1, F, False, 0. The following code converts T and True to 1 and F and False to 0."
+    "The columns CANCELLED and DIVERTED have the following values - T, True, 1, F, False, 0. The following code replaces T, True and 1 to numpy boolean type True and F, False and 1 to numpy boolean type True."
    ]
   },
   {
@@ -598,7 +598,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ True])"
+       "array([False,  True])"
       ]
      },
      "execution_count": 18,
@@ -607,8 +607,8 @@
     }
    ],
    "source": [
-    "flights['CANCELLED'].replace({'F': '0', 'False': '0'}, inplace=True)\n",
-    "flights['CANCELLED'].replace({'T': '1', 'True': '1'}, inplace=True)\n",
+    "flights['CANCELLED'].replace({'F': False, 'False': False, '0': False}, inplace=True)\n",
+    "flights['CANCELLED'].replace({'T': True, 'True': True, '1': True}, inplace=True)\n",
     "flights['CANCELLED'] = flights['CANCELLED'].astype('bool')\n",
     "flights['CANCELLED'].unique()"
    ]
@@ -621,7 +621,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ True])"
+       "array([False,  True])"
       ]
      },
      "execution_count": 19,
@@ -630,8 +630,8 @@
     }
    ],
    "source": [
-    "flights['DIVERTED'].replace({'F': '0', 'False': '0'}, inplace=True)\n",
-    "flights['DIVERTED'].replace({'T': '1', 'True': '1'}, inplace=True)\n",
+    "flights['DIVERTED'].replace({'F': False, 'False': False, '0': False}, inplace=True)\n",
+    "flights['DIVERTED'].replace({'T': True, 'True': True, '1': True}, inplace=True)\n",
     "flights['DIVERTED'] = flights['DIVERTED'].astype('bool')\n",
     "flights['DIVERTED'].unique()"
    ]
