Added next day arrival column in table

--- a/01 Data Cleansing.ipynb
+++ b/01 Data Cleansing.ipynb
@@ -746,13 +746,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 12. Additional column that indicates if the flight arrival time is the next day after the departure time\n",
+    "Converting DEPTIME and ARRTIME to timedelta data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "timedelta64[ns]\n",
+      "timedelta64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "flights['DEPTIME_TM'] = pd.to_timedelta(flights['DEPTIME'], unit=\"s\")\n",
+    "flights['ARRTIME_TM'] = pd.to_timedelta(flights['ARRTIME'], unit=\"s\")\n",
+    "print(flights['DEPTIME_TM'].dtype)\n",
+    "print(flights['ARRTIME_TM'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "We just want to make sure that there are no flights spanning over a day. As we can see below, the maximum flight duration of a flight is 23 hours 53 minutes (what a crazy flight that would be)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timedelta('0 days 23:53:00')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(flights['ARRTIME_TM'] - flights['DEPTIME_TM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "Name: NEXT_DAY_ARRIVAL_YN, dtype: bool"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights['NEXT_DAY_ARRIVAL_YN'] = flights['DEPTIME'] > flights['ARRTIME']\n",
+    "flights['NEXT_DAY_ARRIVAL_YN'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "Drop the timedelta columns from the Data Frame. They are not used anywhere else and saving the Data Frame as parquet with timedelta columns does not work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights.drop(columns=['DEPTIME_TM', 'ARRTIME_TM'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 12. Converting DataFrame to parquet\n",
     "Saving the DataFrame as a parquet format. The parquet file format is a binary file which stores the schema information as well. The file can later be read and stored to a database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
