--- a/02 Data Loading.ipynb
+++ b/02 Data Loading.ipynb
@@ -31,42 +31,43 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1191805 entries, 0 to 1191804\n",
-      "Data columns (total 33 columns):\n",
-      "TRANSACTIONID        1191805 non-null int64\n",
-      "FLIGHTDATE           1191805 non-null datetime64[ns]\n",
-      "AIRLINECODE          1191805 non-null object\n",
-      "AIRLINENAME          1191805 non-null object\n",
-      "TAILNUM              1034988 non-null object\n",
-      "FLIGHTNUM            1191805 non-null int64\n",
-      "ORIGINAIRPORTCODE    1191805 non-null object\n",
-      "ORIGAIRPORTNAME      1191805 non-null object\n",
-      "ORIGINCITYNAME       1191805 non-null object\n",
-      "ORIGINSTATE          1191805 non-null object\n",
-      "ORIGINSTATENAME      1191805 non-null object\n",
-      "DESTAIRPORTCODE      1191805 non-null object\n",
-      "DESTAIRPORTNAME      1191805 non-null object\n",
-      "DESTCITYNAME         1191805 non-null object\n",
-      "DESTSTATE            1191805 non-null object\n",
-      "DESTSTATENAME        1191805 non-null object\n",
-      "CRSDEPTIME           1191805 non-null object\n",
-      "DEPTIME              1163470 non-null object\n",
-      "DEPDELAY             1163470 non-null float64\n",
-      "TAXIOUT              1011833 non-null float64\n",
-      "WHEELSOFF            1011791 non-null float64\n",
-      "WHEELSON             1010225 non-null float64\n",
-      "TAXIIN               1010320 non-null float64\n",
-      "CRSARRTIME           1191805 non-null object\n",
-      "ARRTIME              1161439 non-null object\n",
-      "ARRDELAY             1160545 non-null float64\n",
-      "CRSELAPSEDTIME       1191383 non-null float64\n",
-      "ACTUALELAPSEDTIME    1160545 non-null float64\n",
-      "CANCELLED            1191805 non-null bool\n",
-      "DIVERTED             1191805 non-null bool\n",
-      "DISTANCE             1191805 non-null float64\n",
-      "DISTANCE_GROUP       1191805 non-null object\n",
-      "DEPDELAY_GT15        1191805 non-null bool\n",
-      "dtypes: bool(3), datetime64[ns](1), float64(9), int64(2), object(18)\n",
-      "memory usage: 285.3+ MB\n"
+      "Data columns (total 34 columns):\n",
+      "TRANSACTIONID          1191805 non-null int64\n",
+      "FLIGHTDATE             1191805 non-null datetime64[ns]\n",
+      "AIRLINECODE            1191805 non-null object\n",
+      "AIRLINENAME            1191805 non-null object\n",
+      "TAILNUM                1034988 non-null object\n",
+      "FLIGHTNUM              1191805 non-null int64\n",
+      "ORIGINAIRPORTCODE      1191805 non-null object\n",
+      "ORIGAIRPORTNAME        1191805 non-null object\n",
+      "ORIGINCITYNAME         1191805 non-null object\n",
+      "ORIGINSTATE            1191805 non-null object\n",
+      "ORIGINSTATENAME        1191805 non-null object\n",
+      "DESTAIRPORTCODE        1191805 non-null object\n",
+      "DESTAIRPORTNAME        1191805 non-null object\n",
+      "DESTCITYNAME           1191805 non-null object\n",
+      "DESTSTATE              1191805 non-null object\n",
+      "DESTSTATENAME          1191805 non-null object\n",
+      "CRSDEPTIME             1191805 non-null object\n",
+      "DEPTIME                1163470 non-null object\n",
+      "DEPDELAY               1163470 non-null float64\n",
+      "TAXIOUT                1011833 non-null float64\n",
+      "WHEELSOFF              1011791 non-null float64\n",
+      "WHEELSON               1010225 non-null float64\n",
+      "TAXIIN                 1010320 non-null float64\n",
+      "CRSARRTIME             1191805 non-null object\n",
+      "ARRTIME                1161439 non-null object\n",
+      "ARRDELAY               1160545 non-null float64\n",
+      "CRSELAPSEDTIME         1191383 non-null float64\n",
+      "ACTUALELAPSEDTIME      1160545 non-null float64\n",
+      "CANCELLED              1191805 non-null bool\n",
+      "DIVERTED               1191805 non-null bool\n",
+      "DISTANCE               1191805 non-null float64\n",
+      "DISTANCE_GROUP         1191805 non-null object\n",
+      "DEPDELAY_GT15          1191805 non-null bool\n",
+      "NEXT_DAY_ARRIVAL_YN    1191805 non-null bool\n",
+      "dtypes: bool(4), datetime64[ns](1), float64(9), int64(2), object(18)\n",
+      "memory usage: 286.4+ MB\n"
      ]
     }
    ],
@@ -293,7 +294,8 @@
     "                            DIVERTED             boolean,\n",
     "                            DISTANCE             float,\n",
     "                            DISTANCE_GROUP       text,\n",
-    "                            DEPDELAY_GT15        boolean\n",
+    "                            DEPDELAY_GT15        boolean,\n",
+    "                            NEXT_DAY_ARRIVAL_YN  boolean\n",
     "                            ); '''\n",
     "    cursor.execute(create_table_query)\n",
     "    \n",
@@ -303,7 +305,7 @@
     "    flights2 = flights.loc[:, ['TRANSACTIONID','FLIGHTDATE','TAILNUM','FLIGHTNUM','AIRLINECODE','ORIGINAIRPORTCODE',\n",
     "                              'DESTAIRPORTCODE','CRSDEPTIME','DEPTIME','DEPDELAY','TAXIOUT','WHEELSOFF','WHEELSON',\n",
     "                              'TAXIIN','CRSARRTIME','ARRTIME','ARRDELAY','CRSELAPSEDTIME','ACTUALELAPSEDTIME',\n",
-    "                              'CANCELLED','DIVERTED','DISTANCE','DISTANCE_GROUP', 'DEPDELAY_GT15']]\n",
+    "                              'CANCELLED','DIVERTED','DISTANCE','DISTANCE_GROUP', 'DEPDELAY_GT15', 'NEXT_DAY_ARRIVAL_YN']]\n",
     "\n",
     "    print(\"Starting data load into fact table\")\n",
     "\n",
@@ -406,7 +408,8 @@
     "                            DIVERTED,\n",
     "                            DISTANCE,\n",
     "                            DISTANCE_GROUP,\n",
-    "                            DEPDELAY_GT15\n",
+    "                            DEPDELAY_GT15,\n",
+    "                            NEXT_DAY_ARRIVAL_YN\n",
     "                            from fact_FLIGHT; '''\n",
     "    cursor.execute(create_view_query)\n",
     "    \n",
@@ -420,14 +423,6 @@
     "    if(connection):\n",
     "        cursor.close()\n",
     "        connection.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Issues with data\n",
-    "- ARRTIME and DEPTIME: Although DEPTIME and FLIGHTDATE are in the data, there is no way to deduce Arrival Date."
    ]
   }
  ],
